@startuml

hide circle
skinparam classAttributeIconSize 0

class "{abstract}\n<i>Command" {
    +<i>execute(ModuleList:moduleList, Ui:ui, Storage:storage)
}

class "AddCommand" {
    #moduleCode:String
    #moduleName:String
    #moduleType:String
    #moduleCredits:Double
    #preRequisites:ArrayList<String>
    #untakenPreRequisites:ArrayList<String>
    +execute(ModuleList:moduleList, Ui:ui, Storage:storage)
}

class "CapCommand" {
    #cap:Float
    #degreeClassification:String
    +execute(ModuleList:moduleList, Ui:ui, Storage:storage)
}

class "DeleteCommand" {
    #moduleCode:String
    +execute(ModuleList:moduleList, Ui:ui, Storage:storage)
}

"{abstract}\n<i>Command" <|-- "AddCommand"
"{abstract}\n<i>Command" <|-- "CapCommand"
"{abstract}\n<i>Command" <|-- "DeleteCommand"
@enduml